--- a/tictac.scss
+++ b/tictac.scss
@@ -1,3 +1,19 @@
+html, body, h1, h2 {
+  margin: 0;
+  padding: 0;
+  font-family: 'Shadows Into Light', cursive;
+}
+
+h1 {
+
+  font-family: 'Titillium Web', sans-serif;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  margin: 6em 0em 0em 0em;
+}
 .rawr {
   display: flex;
   justify-content: center;
