--- a/tictac.scss
+++ b/tictac.scss
@@ -4,14 +4,20 @@ html, body, h1, h2 {
   font-family: 'Shadows Into Light', cursive;
 }
 
-h1 {
 
+h1 {
   font-family: 'Titillium Web', sans-serif;
+}
+
+h5 {
+  font-size: 5em;
 }
 
 header {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin: 6em 0em 0em 0em;
 }
 .rawr {
@@ -59,6 +65,9 @@ header {
 }
 
 #tile {
+  display: flex;
+  align-items: center;
+
   align-self: center;
   padding: 3em;
   margin: 0.5em;
