--- a/tictac.scss
+++ b/tictac.scss
@@ -64,13 +64,12 @@ header {
   flex-direction: column;
 }
 
-#tile {
+.tile {
   display: flex;
   align-items: center;
 
   align-self: center;
   padding: 3em;
-  margin: 0.5em;
   width: 1em;
   height: 1em;
   border: 2px solid black;
@@ -99,6 +98,11 @@ footer {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: -1;
+  z-index: -2;
   flex-direction: column;
+}
+
+.reset {
+  font-family: 'Shadows Into Light', cursive;
+  z-index: 1;
 }
