basic solving fully working

--- a/tictac.scss
+++ b/tictac.scss
@@ -13,6 +13,11 @@ h5 {
   font-size: 5em;
 }
 
+.all {
+  display: flex;
+  // flex-direction: column;
+}
+
 header {
   display: flex;
   justify-content: center;
